[tool.poetry]
name = "ldap-user"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ldap_user"}]

[tool.poetry.dependencies]
python = "^3.11"
ldap3 = "^2.9.1"
Flask = "2.3.2"
WTForms = "3.0.0"
sentry-sdk = "^2.8.0"
email-validator = "1.1.3"
sshpubkeys = "3.3.1"
uwsgi = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
